# ChadGPT

./: 1  pyproject.toml
autogpts/ChadGPT/: pyproject.toml
autogpts/ChadGPT/forge/: agent.py
autogpts/ChadGPT/forge/prompts/gpt-3.5-turbo/: system-format.j2  task-step.j2
autogpts/ChadGPT/forge/sdk/: llm.py  workspace.py
autogpts/ChadGPT/forge/sdk/abilities/: finance.py
autogpts/ChadGPT/forge/sdk/abilities/scraping/: web.py
autogpts/forge/forge/sdk/routes/: agent_protocol.py
